testsuite/tests/typecheck/should_fail/tcfail159.stderr

tcfail159.hs:9:11: error: [GHC-83865]
    • Expecting a lifted type, but got an unlifted type
    • In the pattern: ~(# p, q #)
      In a case alternative: ~(# p, q #) -> p
      In the expression: case h x of ~(# p, q #) -> p
